--- a/src/main/resources/templates/layouts/layout.html
+++ b/src/main/resources/templates/layouts/layout.html
@@ -43,7 +43,7 @@
   </head>
   <body>
     <div layout:fragment="header">
-      <div th:replace="~{/fragments/header :: header}"></div>
+      <div th:replace="~{fragments/header :: header}"></div>
     </div>
 
     <!-- <main th:fragment="content"></main> -->
