--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -12,7 +12,7 @@
           <div class="header__nav">
             <nav class="header__menu mobile-menu">
               <ul>
-                <li><a th:href="@{/}">Sol</a></li>
+                <li><a th:href="@{/}">SolFlix</a></li>
                 <li>
                   <a th:href="@{/api/movies/list}">Movie List</a>
                 </li>
